--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,23 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 
-
-.box-login {
-    z-index: 1;
-    text-align: center;
-    margin-top: 45vh;
-    left: 0;
-    right: 0;
-}
-
-
-
-
-
-
-/*  Lottie  */
+/*  LOTTIE BG  */
 
 .lottie-bg {
     z-index: -1;
@@ -34,84 +16,122 @@
     bottom:0;
 }
 
-@media (min-width: 1940px){
-    .lottie-bg {
-        width: 100%;
-    }
+
+
+
+/* BOX LOGIN */
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
-
-/*
-## 4K screens
- */
-@media (min-width: 1440px) and (max-width: 1939px){
-    .lottie-bg {
-        width: 100%;
-    }
+body{
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(120deg,#2980b9, #2691d9);
+  height: 100vh;
+  overflow: hidden;
 }
-
-/*
-##Device = Desktops
-##Screen = 1281px to higher resolution desktops
-*/
-
-@media (min-width: 1281px) and (max-width: 1439px) {
-    .lottie-bg {
-        width: 100%;
-    }
+.center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.5);
+  opacity: calc(1);
 }
-
-/*
-##Device = Laptops, Desktops
-##Screen = B/w 1025px to 1280px
-*/
-
-@media (min-width: 1025px) and (max-width: 1280px) {
-    .lottie-bg {
-        width: 100%;
-    }
+.center h1{
+  text-align: center;
+  padding: 20px 0;
+  border-bottom: 1px solid silver;
 }
-
-/*
-##Device = Tablets, Ipads (portrait)
-##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .lottie-bg {
-        width: 100%;
-    }
+.center form{
+  padding: 0 40px;
+  box-sizing: border-box;
 }
-
-/*
-##Device = Tablets, Ipads (landscape)
-##Screen = B/w 768px to 1024px
-*/
-
-/*@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {*/
-/*    .lottie-bg {*/
-/*        width: 50%;*/
-/*    }*/
-/*}*/
-
-/*
-##Device = Low Resolution Tablets, Mobiles (Landscape)
-##Screen = B/w 481px to 767px
-*/
-
-@media (min-width: 481px) and (max-width: 767px) {
-    .lottie-bg {
-        width: 100%;
-    }
+form .txt_field{
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin: 30px 0;
 }
-
-/*
-##Device = Most of the Smartphones Mobiles (Portrait)
-##Screen = B/w 320px to 479px
-*/
-
-@media (min-width: 320px) and (max-width: 480px) {
-    .lottie-bg {
-        width: 100%;
-    }
+.txt_field input{
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+.txt_field label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .5s;
+}
+.txt_field span::before{
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: #2691d9;
+  transition: .5s;
+}
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label{
+  top: -5px;
+  color: #2691d9;
+}
+.txt_field input:focus ~ span::before,
+.txt_field input:valid ~ span::before{
+  width: 100%;
+}
+.pass{
+  margin: -5px 0 20px 5px;
+  color: #a6a6a6;
+  cursor: pointer;
+}
+.pass:hover{
+  text-decoration: underline;
+}
+input[type="submit"]{
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+}
+input[type="submit"]:hover{
+  border-color: #2691d9;
+  transition: .5s;
+}
+.signup_link{
+  margin: 30px 0;
+  text-align: center;
+  font-size: 16px;
+  color: #666666;
+}
+.signup_link a{
+  color: #2691d9;
+  text-decoration: none;
+}
+.signup_link a:hover{
+  text-decoration: underline;
 }
