--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -31,7 +31,7 @@
 body{
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg,#2980b9, #2691d9);
+  background: linear-gradient(120deg,#2980b9, #ffffff);
   height: 100vh;
   overflow: hidden;
 }
