--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,7 +7,7 @@
     height: 100%;
     left: 0;
     right: 0;
-    position: fixed;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     left:0; 
@@ -110,7 +110,7 @@ input[type="submit"]{
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: #2691d9;
+  background: #2980b9;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -119,7 +119,7 @@ input[type="submit"]{
   outline: none;
 }
 input[type="submit"]:hover{
-  border-color: #2691d9;
+  border-color: #2980b9;
   transition: .5s;
 }
 .signup_link{
@@ -129,7 +129,7 @@ input[type="submit"]:hover{
   color: #666666;
 }
 .signup_link a{
-  color: #2691d9;
+  color: #2980b9;
   text-decoration: none;
 }
 .signup_link a:hover{
