--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -13,10 +13,7 @@ header {
     margin: 0 320px;
 }
 
-h1 {
-    
-    
-}
+
 
 nav {
     position: absolute;
@@ -40,4 +37,5 @@ nav a:hover {
     color: #000080;
     text-decoration: underline;
     font-size: 16px;
+    text-decoration: none;
 }
