--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,8 +17,6 @@
 }
 
 
-
-
 /* BOX LOGIN */
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
@@ -31,10 +29,15 @@
 body{
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg,#2980b9, #ffffff);
+  background: linear-gradient(120deg,#260965, #ffffff);
   height: 100vh;
   overflow: hidden;
 }
+
+h1 {
+  color: #412697;
+}
+
 .center{
   position: absolute;
   top: 50%;
@@ -86,13 +89,13 @@ form .txt_field{
   left: 0;
   width: 0%;
   height: 2px;
-  background: #2691d9;
+  background: #260965;
   transition: .5s;
 }
 .txt_field input:focus ~ label,
 .txt_field input:valid ~ label{
   top: -5px;
-  color: #2691d9;
+  color: #260965;
 }
 .txt_field input:focus ~ span::before,
 .txt_field input:valid ~ span::before{
@@ -110,7 +113,7 @@ input[type="submit"]{
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: #2980b9;
+  background: #412697;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -119,8 +122,9 @@ input[type="submit"]{
   outline: none;
 }
 input[type="submit"]:hover{
-  border-color: #2980b9;
-  transition: .5s;
+  border-color: #260965;
+  background-color: #260965;
+  transition: 1s;
 }
 .signup_link{
   margin: 30px 0;
