--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,7 +29,7 @@
 body{
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg,#260965, #ffffff);
+  background: linear-gradient(120deg,#260965, #260965);
   height: 100vh;
   overflow: hidden;
 }
