--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,13 +29,13 @@
 body{
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg,#260965, #260965);
+  background: linear-gradient(120deg,#000, #6511a5);
   height: 100vh;
   overflow: hidden;
 }
 
 h1 {
-  color: #412697;
+  color: #6511a5;
 }
 
 .center{
@@ -95,7 +95,7 @@ form .txt_field{
 .txt_field input:focus ~ label,
 .txt_field input:valid ~ label{
   top: -5px;
-  color: #260965;
+  color: #6511a5;
 }
 .txt_field input:focus ~ span::before,
 .txt_field input:valid ~ span::before{
@@ -113,7 +113,7 @@ input[type="submit"]{
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: #412697;
+  background: #6511a5;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -122,8 +122,9 @@ input[type="submit"]{
   outline: none;
 }
 input[type="submit"]:hover{
-  border-color: #260965;
-  background-color: #260965;
+  border-color: #6511a5;
+  background-color: #6511a5;
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
   transition: 1s;
 }
 .signup_link{
@@ -133,7 +134,7 @@ input[type="submit"]:hover{
   color: #666666;
 }
 .signup_link a{
-  color: #2980b9;
+  color: #6511a5;
   text-decoration: none;
 }
 .signup_link a:hover{
