--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Poppins", sans-serif;
 }
-header {
+/*header {
     background: linear-gradient(#2980b9, #ffffff);
     padding: 25px 0;
   
