--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -38,4 +38,10 @@ nav a:hover {
     text-decoration: underline;
     font-size: 16px;
     text-decoration: none;
+} 
+
+#logomenu{
+    width: auto;
+    height: 100% ;
 }
+*/
