--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,47 +1,37 @@
 body {
     font-family: "Poppins", sans-serif;
 }
-/*header {
-    background: linear-gradient(#2980b9, #ffffff);
-    padding: 25px 0;
-  
-}
-
-.nav01 {
+.btn {
     position: relative;
-    width: 940px;
-    margin: 0 320px;
-}
-
-
-
-nav {
-    position: absolute;
-    top: 1px;
-    right: 0;
-}
-
-nav li {
-    display: inline;
-    margin: 0 0 0 20px;
-}
-
-nav a {
-    font-size: 14px;
-    color: black;
-    text-decoration: none;
+    background-color: aliceblue;
+    color:black;
+    margin-bottom: 0.5rem;
+    padding: 0;
+    border: none;
+    outline: none;
+    font-size: 1.2rem;
     font-weight: bold;
-}
-
-nav a:hover {
-    color: #000080;
-    text-decoration: underline;
-    font-size: 16px;
     text-decoration: none;
-} 
 
-#logomenu{
-    width: auto;
-    height: 100% ;
 }
-*/
+
+.btn::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 0.175rem;
+    left: 0;
+    bottom: 0;
+    background-color: #ffffff;
+    
+
+}
+
+.btn-center::after{
+    transform: scale(0,1);
+    transition: transform 0.3s ease;
+}
+
+.btn-center:hover::after{
+    transform: scale(1,1);
+}
