--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -5,23 +5,23 @@ body {
 .btn {
     position: relative;
     background-color: #fff;
-    border: none;
-    outline: none;
     text-decoration: none;
+
 }
 
 .btn::after{
     content: '';
     position: absolute;
     width: 100%;
-    height: 0.175rem;
+    height: 2px;
     left: 0;
     bottom: 0;
-    background-color: #ffffff;
+    background-color: #fff;
     border: none;
-    text-decoration: none;
     transform: scale(0,1);
     transition: transform 0.3s ease;
+    padding: 0;
+    margin: 0;
 }
 
 
@@ -29,4 +29,10 @@ body {
     transform: scale(1);
     border: none;
     text-decoration: none;
+    padding: 0;
+    margin: 0;
+}
+
+.logomenu {
+    justify-content: start;
 }
